# PARALLEL

./: experiment.sh  hpc.sh  process_results.sh
0-BENCHMARK/: README.md
1-OMP/: compile.sh  heat_parallel.c  hpc.sh
1-OMP/results/: parallel.txt  serial.txt
1-OMP/results/raw/: heat_parallel_1000_100000.o36088  heat_parallel_100_1000.o36082  heat_parallel_100_10000.o36083  heat_parallel_100_100000.o36084  heat_parallel_2000_100.o36089  heat_parallel_2000_1000.o36090  heat_parallel_2000_10000.o36091  heat_parallel_2000_100000.o36092  heat_serial_1000_100.o36097  heat_serial_1000_10000.o36099  heat_serial_100_1000.o36094  heat_serial_100_10000.o36095  heat_serial_2000_100.o36101
2-MPI/: CMakeLists.txt  heat_parallel.c  hpc.sh
2-MPI/doc/: .gitignore  main.tex
2-MPI/results/: analysis.ipynb
2-MPI/results/raw/run1/: all_results.csv  th10_sz100_st100.csv  th10_sz100_st1000.csv  th10_sz100_st10000.csv  th2_sz1000_st100.csv  th2_sz1000_st1000.csv  th2_sz1000_st10000.csv  th2_sz1000_st100000.csv  th2_sz100_st100.csv  th2_sz100_st1000.csv  th2_sz100_st10000.csv  th2_sz100_st100000.csv  th2_sz2000_st100.csv  th2_sz2000_st1000.csv  th2_sz2000_st10000.csv  th2_sz2000_st100000.csv  th4_sz1000_st100.csv  th4_sz1000_st1000.csv  th4_sz1000_st10000.csv  th4_sz1000_st100000.csv  th4_sz100_st100.csv  th4_sz100_st1000.csv  th4_sz100_st10000.csv  th4_sz100_st100000.csv  th4_sz2000_st100.csv  th4_sz2000_st1000.csv  th4_sz2000_st10000.csv  th4_sz2000_st100000.csv
2-MPI/results/raw/run2/: all_results.csv  th2_sz1000_st100.csv  th2_sz1000_st1000.csv  th2_sz1000_st10000.csv  th2_sz1000_st100000.csv  th2_sz100_st100.csv  th2_sz100_st1000.csv  th2_sz100_st10000.csv  th2_sz100_st100000.csv  th2_sz2000_st100.csv  th2_sz2000_st1000.csv  th2_sz2000_st10000.csv  th2_sz2000_st100000.csv  th4_sz1000_st100.csv  th4_sz1000_st1000.csv  th4_sz1000_st10000.csv  th4_sz1000_st100000.csv  th4_sz100_st100.csv  th4_sz100_st1000.csv  th4_sz100_st10000.csv  th4_sz100_st100000.csv  th4_sz2000_st100.csv  th4_sz2000_st1000.csv  th4_sz2000_st10000.csv  th4_sz2000_st100000.csv  th5_sz1000_st100.csv  th5_sz1000_st1000.csv  th5_sz1000_st10000.csv  th5_sz1000_st100000.csv  th5_sz100_st100.csv  th5_sz100_st1000.csv  th5_sz100_st10000.csv  th5_sz100_st100000.csv  th5_sz2000_st100.csv  th5_sz2000_st1000.csv  th5_sz2000_st10000.csv  th5_sz2000_st100000.csv
3-CUDA/: CMakeLists.txt  README.md  main.c  main.cu
EXERCICI_1/: README.md  plotter.py
OMP/: CMakeLists.txt  experiment.sh  heat_serial.c  hpc.sh  main.c
OMP/doc/: main.tex
OMP/results/raw/: heat_parallel_1000_100.o36085  heat_parallel_1000_1000.o36086  heat_parallel_1000_10000.o36087  heat_parallel_100_100.o36081  heat_serial_1000_1000.o36098  heat_serial_1000_100000.o36100  heat_serial_100_100.o36093  heat_serial_100_100000.o36096  heat_serial_2000_1000.o36102  heat_serial_2000_10000.o36103  heat_serial_2000_100000.o36104
